--- a/src/app/shared/additions/sidebar/sidebar.component.html
+++ b/src/app/shared/additions/sidebar/sidebar.component.html
@@ -51,11 +51,12 @@
             </a>
           </li>
           <li>
-            <a routerLink="/products/add" routerLinkActive="bg-[#d9ecff] text-blue-700 active"
-               class="flex items-center p-2 rounded-lg hover:bg-[#eaeaea] group">
-              <span class="ms-3">Add Product</span>
-            </a>
-          </li>
+  <a routerLink="/products/categories" routerLinkActive="bg-[#d9ecff] text-blue-700 active"
+     class="flex items-center p-2 rounded-lg hover:bg-[#eaeaea] group">
+    <span class="ms-3">Categories</span>
+  </a>
+</li>
+
           <li>
             <a routerLink="/products/stock" routerLinkActive="bg-[#d9ecff] text-blue-700 active"
                class="flex items-center p-2 rounded-lg hover:bg-[#eaeaea] group">
