--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-sidebar></app-sidebar>
 <app-navbar></app-navbar>
 
-<div class="mt-16 p-4 sm:ml-48 bg-[#f8f9fb]">
+<div class="mt-16 p-4 sm:ml-48 bg-[#f8f9fb] min-h-screen">
   <router-outlet></router-outlet>
 </div>
